--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,31 @@ html,body{height: 100%;}
   opacity: 0;
 }
 
+table {
+    width: 60%;
+    border-collapse: collapse;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    margin: 20px auto;
+}
+th, td {
+    border: 1px solid black;
+    padding: 10px;
+}
+th {
+    background-color: #f2f2f2;
+}
+.color-box {
+    width: 50px;
+    height: 20px;
+    display: inline-block;
+}
+.good { background-color: green; }
+.moderate { background-color: blue; }
+.unhealthy { background-color: yellow; }
+.very-unhealthy { background-color: red; }
+.dangerous { background-color: black; }
+
 .boxContainer {
     display: flex;
     flex-direction: column;
