--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,30 +96,35 @@ html,body{height: 100%;}
   opacity: 0;
 }
 
+
 table {
-    width: 60%;
+    width: 100%;
     border-collapse: collapse;
-    text-align: center;
-    font-family: Arial, sans-serif;
-    margin: 20px auto;
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-th, td {
+th {
     border: 1px solid black;
     padding: 10px;
+    text-align: center;
 }
+td{
+    border: 1px solid black;
+    padding: 10px;
+    text-align: left;
+}
+
 th {
     background-color: #f2f2f2;
 }
-.color-box {
-    width: 50px;
-    height: 20px;
-    display: inline-block;
-}
-.good { background-color: green; }
-.moderate { background-color: blue; }
-.unhealthy { background-color: yellow; }
-.very-unhealthy { background-color: red; }
-.dangerous { background-color: black; }
+.good { background-color: #66cc66; }
+.moderate { background-color: #ffff66; }
+.unhealthy-sensitive { background-color: #ffcc66; }
+.unhealthy { background-color: #ff6666; }
+.very-unhealthy { background-color: #cc3333; }
+.hazardous { background-color: #993333; color: white; }
 
 .boxContainer {
     display: flex;
