--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,6 +329,25 @@ nav.navbar.bootsnav .navbar-toggle i{color: #ff545a;}
     background:rgba(65,73,89,.65);
     z-index: -1;
 }
+.welcome-data2 {
+    position: relative;
+    background:url(../images/welcome-hero/dataAnalyticsBanner2.jpg)no-repeat;
+    background-position:center;
+    background-size:cover;
+    text-align: center;
+    height:800px;
+    z-index: 1;
+}
+.welcome-data2:before{
+    position: absolute;
+    content: " ";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:rgba(65,73,89,.65);
+    z-index: -1;
+}
 
 .welcome-hero-txt { padding-top: 155px;}
 
