--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,10 +78,7 @@ ul{
     margin: 0 auto;
     list-style: none;
 }
-ul li {
-	list-style: none;
-	
-}
+
 select,input,textarea,button{box-shadow:none;outline:0!important;}
 button {background: transparent;border: 0;font-size: 12px;}
 
@@ -96,6 +93,19 @@ html,body{height: 100%;}
   opacity: 0;
 }
 
+.btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 20px;
+  }
+  
+  /* Darker background on mouse-over */
+  .btn:hover {
+    background-color: RoyalBlue;
+  }
 
 table {
     width: 100%;
@@ -339,6 +349,25 @@ nav.navbar.bootsnav .navbar-toggle i{color: #ff545a;}
     z-index: 1;
 }
 .welcome-data2:before{
+    position: absolute;
+    content: " ";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:rgba(65,73,89,.65);
+    z-index: -1;
+}
+.welcome-data3 {
+    position: relative;
+    background:url(../images/welcome-hero/dataAnalyticsBanner3.jpeg)no-repeat;
+    background-position:center;
+    background-size:cover;
+    text-align: center;
+    height:800px;
+    z-index: 1;
+}
+.welcome-data3:before{
     position: absolute;
     content: " ";
     top: 0;
